--- a/ToDo_Replica/res/layout/add_group.xml
+++ b/ToDo_Replica/res/layout/add_group.xml
@@ -4,7 +4,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<TableRow
-		android:layout_width="wrap_content"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:paddingTop="13px">
 		<TextView
@@ -16,7 +16,7 @@
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:layout_width="wrap_content"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
 		<LinearLayout
 			android:layout_width="wrap_content"
